--- a/passwardgenerator/package.json
+++ b/passwardgenerator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactpasswargenerator",
+  "name": "passwardgenerator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
